# identity

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  monorepo.csproj  rust-toolchain.toml  rustfmt.toml
.github/workflows/: book.yaml  ci.yaml  container.yaml  csharp.yaml  deploy.yaml  lint-pr.yaml  nix.yaml  release.yaml  rust.yaml
apps/identity_server/: Cargo.toml
apps/identity_server/src/: jwks_provider.rs  oauth.rs
did-cli/: Cargo.toml  README.md
did-cli/src/: client.rs  doc.rs  lib.rs  main.rs
did-cli/src/resolvers/: key.rs  mod.rs  pkarr.rs
did-common/: Cargo.toml
did-common/src/: did.rs  did_url.rs  lib.rs  uri.rs
did-csharp/: .gitignore  Class1.cs  did-csharp.csproj
did-key/: Cargo.toml  README.md
did-key/src/: lib.rs
did-pkarr/: Cargo.toml  README.md
did-pkarr/io/: Cargo.toml
did-pkarr/io/src/: lib.rs
did-pkarr/src/: did_pkarr.rs  io.rs  lib.rs
did-pkarr/src/dids/: did.rs  did_pkarr.rs  mod.rs
did-pkarr/src/doc/: builder.rs  doc_contents.rs  mod.rs  vmethod.rs  vrelationship.rs
did-pkarrm/: Cargo.toml  README.md
did-pkarrm/src/: did_pkarr.rs  lib.rs  resolver.rs
did-pkarrm/src/data_model/: did.rs  doc_contents.rs  document_contents.rs  mod.rs  verification_method.rs  verification_relationship.rs  vmethod.rs
did-pkarrm/src/doc/: doc_contents.rs  mod.rs  vmethod.rs  vrelationship.rs
did-pub-sub/: Cargo.toml  README.md
did-pub-sub/src/: lib.rs  topic.rs
did-simple/: Cargo.toml  README.md
did-simple/src/: key_algos.rs  lib.rs  url.rs  varint.rs
did-simple/src/crypto/: ed25519.rs  mod.rs
did-simple/src/methods/: key.rs
did-yeet/: Cargo.toml  README.md
did-yeet/src/: did_key.rs  did_key_new.rs  keychain.rs  lib.rs  ops.rs  signature.rs
docs/: book.toml
docs/src/: chapter_1.md
header-parsing/src/: lib.rs
identity-frontend/: Cargo.toml
identity-frontend/src/: main.rs
identity-server/: Cargo.toml  Dockerfile  default-config.toml  default_config.toml  justfile  kubernetes.yaml
identity-server/fixtures/: sample_users.sql
identity-server/migrations/: 20240812062115_users.up.sql
identity-server/src/: config.rs  did.rs  handle.rs  jwk.rs  jwks_provider.rs  lib.rs  main.rs  oauth.rs  uuid.rs
identity-server/src/v1/: mod.rs
key-generator/: Cargo.toml  README.md
key-generator/c-api/: Cargo.toml
key-generator/c-api/src/: lib.rs  rstr.rs  rvec.rs
key-generator/examples/: bar.rs  baz.rs  cli.rs  foo.rs  minimal.rs
key-generator/src/: exports.rs  lib.rs
nix/: deploy-rs.nix  devShells.nix  inputs.nix
nix/nixos/: home.nix  identity-server-config.toml  identityServerSystemd.nix  nixosConfigurations.nix
nix/nixos/servers-us-east-1/: configuration.nix  hardware-configuration.nix
nix/overlays/: nixpkgs-unstable.nix
