[workspace]
resolver = "2"
members = [
	"did-simple",
	"header-parsing",
	"identity-server",
]

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
version = "0.0.0"
license = "MIT-0 OR Apache-2.0"
repository = "https://github.com/NexusSocial/identity"
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
arc-swap = "1.7.1"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-macros = "0.4.1"
axum-server = "0.7.1"
base64 = "0.21.7"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6"
did-simple.path = "did-simple"
eyre = "0.6"
futures = "0.3.30"
header-parsing.path = "header-parsing"
hex-literal = "0.4.1"
http = "1.1.0"
http-body-util = "0.1.2"
jose-jwk = { version = "0.1.2", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false }
rustls-acme = { version = "0.11.1", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.64"
tokio = { version = "1.35.1", default-features = false }
toml = "0.8.19"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
url = "2.5.2"
uuid = "1.7.0"
wiremock = "0.6.2"

[workspace.dependencies.derive_more]
version = "1.0.0"
default-features = false

[profile.dev]
# Enable a small amount of optimization in debug mode
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies, but not for our code:
opt-level = 2

# What we use when producing artifacts to distribute, size matters more than speed
[profile.artifact]
inherits = "release"
lto = true
strip = true
debug = false

# What we use when producing artifacts in PRs, speed matters more than size
[profile.artifact-dev]
inherits = "dev"
strip = true
debug = false
