[workspace]
resolver = "2"
members = [
	"did-cli",
	"did-common",
	"did-key",
	"did-pkarr",
	"did-simple",
	"did-yeet",
	"header-parsing",
	"identity-server",
]

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
version = "0.0.0"
license = "MIT-0 OR Apache-2.0"
repository = "https://github.com/NexusSocial/identity"
edition = "2021"
rust-version = "1.87.0"

[workspace.dependencies]
arc-swap = "1.7.1"
ascii = "1.1"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-macros = "0.4.1"
axum-server = "0.7.1"
base64 = "0.21.7"
bytemuck = "1.23.1"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6"
curve25519-dalek = "4.1.2"
did-simple.path = "did-simple"
document-features = "0.2.11"
dynosaur = "0.2.0"
ed25519-dalek = "2.1.1"
eyre = "0.6"
fluent-uri = "0.3.2"
futures = "0.3.30"
header-parsing.path = "header-parsing"
hex-literal = "1.0.0"
http = "1.1.0"
http-body-util = "0.1.2"
jose-jwk = { version = "0.1.2", default-features = false }
rand = "0.8.5"
ref-cast = "1.0.24"
reqwest = { version = "0.12.7", default-features = false }
rustls-acme = { version = "0.11.1", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.12.0"
sha2 = "0.10.9"
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.35.1", default-features = false }
toml = "0.8.19"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
url = "2.5.2"
uuid = "1.7.0"
wiremock = "0.6.2"

did-cli.path = "did-cli"
did-common.path = "did-common"
did-key.path = "did-key"
did-pkarr.path = "did-pkarr"

[workspace.dependencies.derive_more]
version = "2.0.1"

default-features = false

[workspace.dependencies.bs58]
default-features = false
git = "https://github.com/conr2d/bs58-rs.git"
# branch = "core-error"
rev = "eea2e9d4f25bb5d79e2a21138531ca6d0ca18678"

[workspace.dependencies.unsigned-varint]
default-features = false
git = "https://github.com/TheButlah/unsigned-varint.git"
branch = "thebutlah/core-error"

[profile.dev]
# Enable a small amount of optimization in debug mode
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies, but not for our code:
opt-level = 2

# What we use when producing artifacts to distribute, size matters more than speed
[profile.artifact]
inherits = "release"
lto = true
strip = true
debug = false

# What we use when producing artifacts in PRs, speed matters more than size
[profile.artifact-dev]
inherits = "dev"
strip = true
debug = false
