[package]
name = "did-cli"
version = "0.0.0"
description = "Demo CLI for working with DIDs"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# Feature flags to enable us to experiment with shrinking binary size
[features]
default = ["did-pkarr"]
did-pkarr = ["dep:did-pkarr"]
# did-key = []
# did-web = []

[dependencies]
dynosaur.workspace = true
derive_more = { workspace = true, features = ["display", "deref"] }
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
did-pkarr = { workspace = true, optional = true }
ed25519-dalek.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
fluent-uri.workspace = true

[dev-dependencies]
hex-literal.workspace = true
