[package]
name = "did-pkarr"
version = "0.0.0"
description = "PKARR based Decentralized Identifiers"
authors = ["Ryan Butler <thebutlah@users.noreply.github.com>"]
keywords = ["pkarr", "did", "decentralized", "identity", "p2p"]
categories = ["cryptography", "network-programming", "web-programming", "game-development"]

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true

[features]
default = ["dht", "http"]
dht = ["pkarr/dht"]
http = ["pkarr/relays"]

[dependencies]
base32.workspace = true
base64.workspace = true
bitflags = { version = "2.9.1", default-features = false, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive" ] }
ed25519-dalek.workspace = true
eyre.workspace = true
fluent-uri.workspace = true
thiserror.workspace = true
pkarr = { version = "3.10.0", default-features = false, features = ["signed_packet"] }


[dev-dependencies]
hex-literal.workspace = true

[package.metadata.docs.rs]
all-features = true
