[package]
name = "did-pkarrm"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
dht = ["pkarr/dht"]

[dependencies]
base32 = "0.5.1"
base64.workspace = true
bitflags = { version = "2.9.1", default-features = false, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive" ] }
ed25519-dalek.workspace = true
eyre.workspace = true
fluent-uri = "0.3.2"
pkarr = { version = "3.7.2", default-features = false, features = ["relays", "keys"] }
thiserror.workspace = true

[package.metadata.docs.rs]
all-features = true
