[package]
name = "did-yeet"
version = "0.0.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "did:yeet Decentralized Identitfier"
publish = false

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
sha2.workspace = true
serde_ipld_dagcbor = "0.6.3"
serde = { workspace = true, features = ["derive"] }
did-key.workspace = true

[dev-dependencies]
serde_json.workspace = true
color-eyre.workspace = true
