[package]
name = "identity-frontend"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Frontend for socialvr.net"
publish = false

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
tracing.workspace = true
tracing-wasm = "0.2.1"
