[package]
name = "key-generator"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
qr-code = ["dep:typst"]

[dependencies]
rand_core.workspace = true
typst = { version = "0.13.1", optional = true }
slip10_ed25519 = "0.1.3" # TODO: fork this as its not no-std
thiserror.workspace = true

[dependencies.bip39]
version = "2.2.0"
default-features = false
features = ["all-languages", "unicode-normalization", "zeroize", "alloc" ]

[dev-dependencies]
rand = "0.9.2"
hex-literal.workspace = true
