[package]
name = "key-generator"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# default = ["export-pdf"]
dalek = ["dep:ed25519-dalek"] # enables conversions to dalek types
os-rng = ["rand_core/os_rng"] # enables helper function to generate phrase from OsRng
export-pdf = ["dep:pdf-writer"] # enables export to PDF, SVG, etc

[dependencies]
bon.workspace = true
rand_core.workspace = true
sha2 = { workspace = true, default-features = false }
slip10_ed25519 = "0.1.3" # TODO: fork this as its not no-std
hmac.workspace = true
thiserror.workspace = true
ed25519-dalek = { workspace = true, optional = true, default-features = false }
pdf-writer = { version = "0.13.0", optional = true }

[dependencies.bip39]
version = "2.2.0"
default-features = false
features = ["zeroize"]

[dev-dependencies]
base32.workspace = true
base64.workspace = true
bs58 = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
ed25519-dalek = { workspace = true, default-features = true }
hex-literal.workspace = true
hex.workspace = true
owo-colors.workspace = true
rand = "0.9.2"
